<resources>
    <string name="app_name">Booker_Bruecker</string>
    <string name="event_name">Name: </string>
    <string name="event_date">Date: </string>
    <string name="event_time">Time: </string>
    <string name="add_event_btn">Add Event</string>
    <string name="event_unit">Units</string>
    <string name="event_quantity">Quantity</string>
    <string name="add_event_details_btn">Add Event Details</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Event name</string>
    <string name="back_btn">Back</string>
    <string name="add_events_details">Add Events Details</string>
    <string name="edit_event">Edit Event</string>
    <string name="delete_event">Delete Event</string>
    <string name="update_event_details">Update Details</string>
    <string name="update_event">Update Event</string>
    <string name="student_names">Haley Booker and Tim Bruecker</string>
</resources>
