<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.bcit.ass3.booker_bruecker.AddEvent"
    android:orientation="vertical">

    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goBack"
        android:text="@string/back_btn" />

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/EventName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_name" />

        <EditText
            android:id="@+id/EditEventName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/EventDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_date" />

        <EditText
            android:id="@+id/EditEventDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.95"
            android:ems="10"
            android:inputType="date" />
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/EventTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_time" />

        <EditText
            android:id="@+id/EditEventTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="time" />
    </LinearLayout>

    <Button
        android:id="@+id/UpdateEventBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onUpdate"
        android:text="@string/update_event" />
</LinearLayout>
